--- a/1-1/HomeWork1.html
+++ b/1-1/HomeWork1.html
@@ -12,16 +12,16 @@
 	.website{
 		float:left;
 		width:110px; heigt:30px;
-		margin-left:8px;
+		margin-left:10px;
 	}
 	.menu{
 		float:right;
 		margin-top:0px; margin-bottom:0px;
-		margin-right:8px;
+		margin-right:10px;
 	}
 	.menu li{
 		display:inline;
-		margin:4px;
+		margin:6px;
 	}
 	.hamburger{
 		display:none;
@@ -33,7 +33,8 @@
 		text-align:center;line-height:300px;
 	}
 	.content{
-		width:1200px;margin:auto;
+		width:1200px;
+		margin-left:auto;margin-right:auto;margin-top:20px;
 		display:flex;flex-wrap:wrap;
 		justify-content:space-between;
 	}
@@ -94,7 +95,7 @@
 			<img src="HamburgerMenu.png"></img>
 		</div>
 	</div>
-	<div class="title">Welcome to MyHome</div>
+	<div class="title">Taiwan Lighthouse</div>
 	<div class="content">
 		<div class="box">
 			<img src="三貂角燈塔-本島最東.jpg"></img>
