--- a/1-3/HomeWork3.html
+++ b/1-3/HomeWork3.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <meta charset="utf-8"/>
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <title>test</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+    <title>HomeWork3</title>
 	<script type="text/javascript">
 	var xhr = new XMLHttpRequest();
 		xhr.open('get','https://padax.github.io/taipei-day-trip-resources/taipei-attractions.json',true);
