--- a/1-3/HomeWork3.html
+++ b/1-3/HomeWork3.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <title>HomeWork3</title>
-	<script type="text/javascript">
+    <script type="text/javascript">
 	var xhr = new XMLHttpRequest();
 		xhr.open('get','https://padax.github.io/taipei-day-trip-resources/taipei-attractions.json',true);
 		xhr.send(null);
@@ -14,7 +14,7 @@
 			
 			var box = document.querySelectorAll(".box");
 			var pic = document.querySelectorAll(".pic");
-			for (var i = 0; i < 8; i++) {				
+			for (var i = 0; i < 16; i++) {				
 				var imgsplit = J[i].file.split("http:", 2);
 				var img = document.createElement("img");
 				img.src = "https:" + imgsplit[1];
@@ -27,6 +27,11 @@
 			
 			}
 		}
+	function load(){
+		var btnload = document.getElementById("btnload");
+		btnload.style.display = "block";
+		btnload.style.display = "flex";
+	}
 	</script>
 	<style type="text/css">
 	.header{
@@ -154,5 +159,35 @@
 			<div class="pic"></div>
 		</div>
 	</div>
+	
+	<div class="content" id="btnload" style="display:none">
+		<div class="box">
+			<div class="pic"></div>
+		</div>
+		<div class="box">
+			<div class="pic"></div>
+		</div>
+		<div class="box">
+			<div class="pic"></div>
+		</div>
+		<div class="box">
+			<div class="pic"></div>
+		</div>
+		<div class="box">
+			<div class="pic"></div>
+		</div>
+		<div class="box">
+			<div class="pic"></div>
+		</div>
+		<div class="box">
+			<div class="pic"></div>
+		</div>
+		<div class="box">
+			<div class="pic"></div>
+		</div>
+	</div>
+	<br/>
+	<center><button onclick="load();" style="padding:10px 17px;font-weight:bold;font-size:15px;">Load More</button></center>
+	<br/>
 </body>
 </html>
